--- a/number.ipynb
+++ b/number.ipynb
@@ -370,9 +370,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit ('drawkaos': virtualenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36964bitdrawkaosvirtualenv660495ce4f37423a968cb8e684512fb1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
